--- a/index.html
+++ b/index.html
@@ -3,3 +3,10 @@
 <h1>Welcome to my first site using Github Pages!</h1>
 
 <p>This is a test site.</p>
+
+<button>Print</button>
+
+<script>
+  const print = document.querySelector("button");
+  button.addEventListener("click",function() {window.print;},false)
+</script>
