--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 
 <script>
   const print = document.querySelector("button");
-  button.addEventListener("click",function() {window.print;},false)
+  print.addEventListener("click",function() {window.print;},false)
 </script>
