--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<h1>Hello World!</h1>
+<!doctype html>
+<html>  
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>JavaScript Syntax</title>
+   </head>
+  <body>
+    <h1>Hello World!</h1>
 
-<h1>Welcome to my first site using Github Pages!</h1>
+    <h1>Welcome to my first site using Github Pages!</h1>
 
-<p>This is a test site.</p>
+    <p>This is a test site.</p>
 
-<button id="print-page">Print</button>
+    <button id="print-page">Print</button>
 
-<script>
-  const print = document.querySelector("#print-page");
-  print.addEventListener("click",function() {window.print();},false);
-</script>
+    <script>
+      const print = document.querySelector("#print-page");
+      print.addEventListener("click",function() {window.print();},false);
+    </script>
+  </body>
+</html>
