--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Welcome to my first site using Github Pages!</h1>
 
     <p>This is a test site.</p>
+    
+    <img src="https://upload.wikimedia.org/wikipedia/en/a/a4/Flag_of_the_United_States.svg" alt="sample image" width="100" height="100">
 
     <button id="print-page">Print</button>
 
