--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <p>This is a test site.</p>
     
     <img src="https://upload.wikimedia.org/wikipedia/en/a/a4/Flag_of_the_United_States.svg" alt="sample image" width="100" height="100">
-
-    <button id="print-page">Print</button>
+    <div>
+    <button id="print-page">Print Page</button>
+    </div>
 
     <script>
       const print = document.querySelector("#print-page");
