--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <p>This is a test site.</p>
     
-    <img src="https://upload.wikimedia.org/wikipedia/en/a/a4/Flag_of_the_United_States.svg" alt="sample image" width="100" height="100">
+    <img src="https://miro.medium.com/max/719/1*WaaXnUvhvrswhBJSw4YTuQ.png" alt="sample image" width="719" height="397">
     <div>
     <button id="print-page">Print Page</button>
     </div>
